  both removed from the Morepath API.

  Use ``autoscan``. Also use new explicit ``App.commit`` method, or
  rely on Morepath automatically committing during the first
  request. So instead of::

    morepath.autosetup()
    morepath.run(App())

  you do::

    morepath.autoscan()
    App.commit()  # optional
    morepath.run(App())

- Cleanups and testing of ``reify`` functionality.

- More doctests in the narrative documentation.

0.14 (2016-04-26)
=================

- **New** We have a new chat channel available. You can join us by clicking
  this link:

  https://discord.gg/0xRQrJnOPiRsEANa

  Please join and hang out! We are retiring the (empty) Freenode
  #morepath channel.

- **Breaking change**: Move the basic auth policy to
  ``more.basicauth`` extension extension. Basic auth is just one of
  the authentication choices you have and not the default. To update
  code, make your project depend on ``more.basicauth`` and import
  ``BasicAuthIdentityPolicy`` from ``more.basicauth``.

- **Breaking change**: Remove some exception classes that weren't
  used: ``morepath.error.ViewError``, ``morepath.error.ResolveError``.
  If you try to catch them in your code, just remove the whole
  ``except`` statement as they were never raised.

- **Deprecated** Importing from ``morepath.security`` directly. We
  moved a few things from it into the public API: ``enable_implicit``,
  ``disable_implicit``, ``remember_identity``, ``forget_identity``,
  ``Identity``, ``IdentityPolicy``, ``NO_IDENTITY``. Some of these
  were already documented as importable from ``morepath.security``.
  Although importing from ``morepath.security`` won't break yet, you
  should stop importing from it and import directly from ``morepath``
  instead.

- **Deprecated** ``morepath.autosetup`` and ``morepath.autocommit``
  are both deprecated.

  Use ``autoscan``. Also use new explicit ``App.commit`` method, or
  rely on Morepath automatically committing during the first
  request. So instead of::
